# guidestar

./: .gitignore  README.md  constellation_editor.py  pyproject.toml
.github/: wireframe-review.yml
.github/workflows/: deploy-demos.yml  pages.yml  publish.yml  wireframe-review.yml
demo-builder/: index.html
docs/: accessibility.rst  ci-integration.rst  conf.py  configuration.rst  embedding.rst  index.rst  quickstart.rst  sphinx-directive.rst  standalone.rst
docs/_static/: confluence-bobswift.html  custom.css  demo-builder-wireframe.html  mast-hst.html
docs/demos/: configuration.rst  confluence.rst  html.rst  index.rst  recording.rst  sphinx.rst  styling.rst  web-tool.rst
docs/embedding/: confluence.rst  html.rst  recording.rst  sphinx.rst
docs/gh_actions/: deploy-demos.rst  index.rst  wireframe-review.rst
docs/wireframe/: ai-assisted-screenshots.rst  ai-assisted-url.rst  ai-assisted-vue.rst  ai-assisted.rst  index.rst  live-url-mock.rst  live-url.rst  manual.rst  rf-capture.rst
docs/workflows/: deploy-demos.rst  index.rst
examples/: build.py  index.html  record.py
examples/demos/: kitchen-sink-full.json  kitchen-sink-short.json  mast-hst-static.json  mast-hst.json
examples/demos/mock-api/: demo.html  live-app.html
examples/demos/web-tool/: demo.html  step-1.html  step-2.html  (+4 more)
examples/rf/: inspect_mast.py  live-app.html  mast-jwst-dom.robot  mast-jwst-mock.json  mast-jwst-search.robot  open-library-dom.robot  open-library-screenshot.robot  packages-mock.json
examples/wireframes/: demo-builder.html  log.html  mast-hst.html  mast-jwst-dom.json  mast-jwst-search-standalone.html  mast-jwst-search.html  mast-jwst-search.json  open-library-dom-standalone.html  open-library-dom.html  open-library-dom.json  open-library-screenshot-standalone.html  open-library-screenshot.html  open-library-screenshot.json  output.xml  report.html
src/docs_wireframe_demo/: directive.py
src/guidestar/: __init__.py  directive.py  extension.py
(+13 files in other folders)
