[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guidestar"
version = "0.1.0"
description = "Reusable infrastructure for embedding interactive wireframe demos in Sphinx documentation and standalone HTML pages"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=5.0",
]

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme",
]

[tool.hatch.build.targets.wheel]
packages = ["src/guidestar"]
