[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "guidestar"
dynamic = ["version"]
description = "Reusable infrastructure for embedding interactive wireframe demos in Sphinx documentation and standalone HTML pages"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=5.0",
]

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/guidestar"]
