[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sphinx-guidestar"
dynamic = ["version"]
description = "Reusable infrastructure for embedding interactive wireframe demos in Sphinx documentation and standalone HTML pages"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=5.0",
]

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme",
]
record = [
    "playwright>=1.40",
    "Pillow>=10.0",
]

[project.scripts]
guidestar-build = "guidestar.cli.build:main"
guidestar-record = "guidestar.cli.record:main"
guidestar-index = "guidestar.cli.index:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/guidestar"]
